// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Fragment>
  <AlmBindingDefinitionFormField
    autoFocus={true}
    help="settings.almintegration.form.name.bitbucketcloud.help"
    id="name.bitbucket"
    maxLength={200}
    onFieldChange={[MockFunction]}
    propKey="key"
    value="key"
  />
  <AlmBindingDefinitionFormField
    help={
      <FormattedMessage
        defaultMessage="settings.almintegration.form.workspace.bitbucketcloud.help"
        id="settings.almintegration.form.workspace.bitbucketcloud.help"
        values={
          {
            "example": <React.Fragment>
              https://bitbucket.org/
              <strong>
                {workspace}
              </strong>
              /{repository}
            </React.Fragment>,
          }
        }
      />
    }
    id="workspace.bitbucketcloud"
    isInvalid={false}
    maxLength={80}
    onFieldChange={[MockFunction]}
    propKey="workspace"
    value="workspace"
  />
  <Alert
    className="big-spacer-top"
    variant="info"
  >
    <FormattedMessage
      defaultMessage="settings.almintegration.bitbucketcloud.info"
      id="settings.almintegration.bitbucketcloud.info"
      values={
        {
          "doc_link": <withAppStateContext(DocLink)
            to="/devops-platform-integration/bitbucket-integration/bitbucket-cloud-integration/"
          >
            learn_more
          </withAppStateContext(DocLink)>,
          "oauth": <ForwardRef(Link)
            target="_blank"
            to="https://support.atlassian.com/bitbucket-cloud/docs/use-oauth-on-bitbucket-cloud/"
          >
            settings.almintegration.bitbucketcloud.oauth
          </ForwardRef(Link)>,
          "permission": <strong>
            Pull Requests: Read
          </strong>,
        }
      }
    />
  </Alert>
  <AlmBindingDefinitionFormField
    help="settings.almintegration.form.oauth_key.bitbucketcloud.help"
    id="client_id.bitbucketcloud"
    maxLength={80}
    onFieldChange={[MockFunction]}
    propKey="clientId"
    value="client1"
  />
  <AlmBindingDefinitionFormField
    help="settings.almintegration.form.oauth_secret.bitbucketcloud.help"
    id="client_secret.bitbucketcloud"
    isSecret={true}
    maxLength={160}
    onFieldChange={[MockFunction]}
    overwriteOnly={true}
    propKey="clientSecret"
    value="**clientsecret**"
  />
</Fragment>
`;

exports[`should render correctly: invalid workspace ID 1`] = `
<Fragment>
  <AlmBindingDefinitionFormField
    autoFocus={true}
    help="settings.almintegration.form.name.bitbucketcloud.help"
    id="name.bitbucket"
    maxLength={200}
    onFieldChange={[MockFunction]}
    propKey="key"
    value="key"
  />
  <AlmBindingDefinitionFormField
    error="settings.almintegration.form.workspace.bitbucketcloud.error"
    help={
      <FormattedMessage
        defaultMessage="settings.almintegration.form.workspace.bitbucketcloud.help"
        id="settings.almintegration.form.workspace.bitbucketcloud.help"
        values={
          {
            "example": <React.Fragment>
              https://bitbucket.org/
              <strong>
                {workspace}
              </strong>
              /{repository}
            </React.Fragment>,
          }
        }
      />
    }
    id="workspace.bitbucketcloud"
    isInvalid={true}
    maxLength={80}
    onFieldChange={[MockFunction]}
    propKey="workspace"
    value="my/workspace"
  />
  <Alert
    className="big-spacer-top"
    variant="info"
  >
    <FormattedMessage
      defaultMessage="settings.almintegration.bitbucketcloud.info"
      id="settings.almintegration.bitbucketcloud.info"
      values={
        {
          "doc_link": <withAppStateContext(DocLink)
            to="/devops-platform-integration/bitbucket-integration/bitbucket-cloud-integration/"
          >
            learn_more
          </withAppStateContext(DocLink)>,
          "oauth": <ForwardRef(Link)
            target="_blank"
            to="https://support.atlassian.com/bitbucket-cloud/docs/use-oauth-on-bitbucket-cloud/"
          >
            settings.almintegration.bitbucketcloud.oauth
          </ForwardRef(Link)>,
          "permission": <strong>
            Pull Requests: Read
          </strong>,
        }
      }
    />
  </Alert>
  <AlmBindingDefinitionFormField
    help="settings.almintegration.form.oauth_key.bitbucketcloud.help"
    id="client_id.bitbucketcloud"
    maxLength={80}
    onFieldChange={[MockFunction]}
    propKey="clientId"
    value="client1"
  />
  <AlmBindingDefinitionFormField
    help="settings.almintegration.form.oauth_secret.bitbucketcloud.help"
    id="client_secret.bitbucketcloud"
    isSecret={true}
    maxLength={160}
    onFieldChange={[MockFunction]}
    overwriteOnly={true}
    propKey="clientSecret"
    value="**clientsecret**"
  />
</Fragment>
`;
